test_suite/tests/ui/fail/invalid_option_value/invalid_option_default.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_default.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: expected integer default value for `x` but was `hello`
